[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic/AXM.bas


' 지정 축의 외부(Actual) 카운트의 증가 방향 설정을 포함하여 지정 축의 Encoder 입력 방식을 설정한다.
'    uMethod : 0 - 7 설정.
'    ObverseUpDownMode          = 0x0,            ' 정방향 Up/Down
'    ObverseSqr1Mode            = 0x1,            ' 정방향 1체배
'    ObverseSqr2Mode            = 0x2,            ' 정방향 2체배
'    ObverseSqr4Mode            = 0x3,            ' 정방향 4체배
'    ReverseUpDownMode          = 0x4,            ' 역방향 Up/Down
'    ReverseSqr1Mode            = 0x5,            ' 역방향 1체배
'    ReverseSqr2Mode            = 0x6,            ' 역방향 2체배
'    ReverseSqr4Mode            = 0x7             ' 역방향 4체배
Public Declare Function AxmMotSetEncInputMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uMethod As Long) As Long
' 지정 축의 외부(Actual) 카운트의 증가 방향 설정을 포함하여 지정 축의 Encoder 입력 방식을 반환한다.
Public Declare Function AxmMotGetEncInputMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upMethod As Long) As Long

' 설정 속도 단위가 RPM(Revolution Per Minute)으로 맞추고 싶다면.
' ex>   rpm 계산:
' 4500 rpm ?
' unit/ pulse = 1 : 1이면      pulse/ sec 초당 펄스수가 되는데
' 4500 rpm에 맞추고 싶다면     4500 / 60 초 : 75회전/ 1초
' 모터가 1회전에 몇 펄스인지 알아야 된다. 이것은 Encoder에 Z상을 검색해보면 알수있다.
' 1회전:1800 펄스라면 75 x 1800 = 135000 펄스가 필요하게 된다.
' AxmMotSetMoveUnitPerPulse에 Unit = 1, Pulse = 1800 넣어 동작시킨다.
' 주의할점 : rpm으로 제어하게 된다면 속도와 가속도 도 rpm단위로 바뀌게 된다.

' 지정 축의 펄스 당 움직이는 거리를 설정한다.
Public Declare Function AxmMotSetMoveUnitPerPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dUnit As Double, ByVal lPulse As Long) As Long
' 지정 축의 펄스 당 움직이는 거리를 반환한다.
Public Declare Function AxmMotGetMoveUnitPerPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpUnit As Double, ByRef lpPulse As Long) As Long

' 지정 축에 감속 시작 포인트 검출 방식을 설정한다.
' uMethod : 0 -1 설정
' AutoDetect = 0x0 : 자동 가감속.
' RestPulse  = 0x1 : 수동 가감속."
Public Declare Function AxmMotSetDecelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uMethod As Long) As Long
' 지정 축의 감속 시작 포인트 검출 방식을 반환한다
Public Declare Function AxmMotGetDecelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upMethod As Long) As Long

' 지정 축에 수동 감속 모드에서 잔량 펄스를 설정한다.
' 사용방법: 만약 AxmMotSetRemainPulse를 500 펄스를 설정
'           AxmMoveStartPos를 위치 10000을 보냈을경우에 9500펄스부터
'           남은 펄스 500은  AxmMotSetMinVel로 설정한 속도로 유지하면서 감속 된다.
Public Declare Function AxmMotSetRemainPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uData As Long) As Long
' 지정 축의 수동 감속 모드에서 잔량 펄스를 반환한다.
Public Declare Function AxmMotGetRemainPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef updata As Long) As Long

' 지정 축에 등속도 구동 함수에서의 최고 속도를 설정한다.
' 주의사항 : 입력 최대 속도 값이 PPS가 아니라 UNIT 이다.
' ex) 최대 출력 주파수(PCI-N804/404 : 10 MPPS)
' ex) 최대 출력 Unit/Sec(PCI-N804/404 : 10MPPS * Unit/Pulse)
Public Declare Function AxmMotSetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double) As Long
' 지정 축의 등속도 구동 함수에서의 최고 속도를 반환한다.
Public Declare Function AxmMotGetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpVel As Double) As Long

' 지정 축의 이동 거리 계산 모드를 설정한다.
' uAbsRelMode : POS_ABS_MODE '0' - 절대 좌표계
'               POS_REL_MODE '1' - 상대 좌표계
Public Declare Function AxmMotSetAbsRelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uAbsRelMode As Long) As Long
' 지정 축의 설정된 이동 거리 계산 모드를 반환한다
Public Declare Function AxmMotGetAbsRelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upAbsRelMode As Long) As Long

' 지정 축의 구동 속도 프로파일 모드를 설정한다.
' ProfileMode : SYM_TRAPEZOIDE_MODE    '0' - 대칭 Trapezode
'               ASYM_TRAPEZOIDE_MODE   '1' - 비대칭 Trapezode
'               QUASI_S_CURVE_MODE     '2' - 대칭 Quasi-S Curve
'               SYM_S_CURVE_MODE       '3' - 대칭 S Curve
'               ASYM_S_CURVE_MODE      '4' - 비대칭 S Curve
Public Declare Function AxmMotSetProfileMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uProfileMode As Long) As Long
' 지정 축의 설정한 구동 속도 프로파일 모드를 반환한다.
Public Declare Function AxmMotGetProfileMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upProfileMode As Long) As Long

' 지정 축의 가속도 단위를 설정한다.
' AccelUnit : UNIT_SEC2   '0' - 가감속 단위를 unit/sec2 사용
'             SEC         '1' - 가감속 단위를 sec 사용
Public Declare Function AxmMotSetAccelUnit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uAccelUnit As Long) As Long
' 지정 축의 설정된 가속도단위를 반환한다.
Public Declare Function AxmMotGetAccelUnit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upAccelUnit As Long) As Long

' 주의사항: 최소속도를 UNIT/PULSE 보다 작게할 경우 최소단위가 UNIT/PULSE로 맞추어지기때문에 최소 속도가 UNIT/PULSE 가 된다.
' 지정 축에 초기 속도를 설정한다.
Public Declare Function AxmMotSetMinVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dMinVel As Double) As Long
' 지정 축의 초기 속도를 반환한다.
Public Declare Function AxmMotGetMinVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpMinVel As Double) As Long

' 지정 축의 가속 저크값을 설정한다.[%].
Public Declare Function AxmMotSetAccelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dAccelJerk As Double) As Long
' 지정 축의 설정된 가속 저크값을 반환한다.
Public Declare Function AxmMotGetAccelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpAccelJerk As Double) As Long

' 지정 축의 감속 저크값을 설정한다.[%].
Public Declare Function AxmMotSetDecelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dDecelJerk As Double) As Long
' 지정 축의 설정된 감속 저크값을 반환한다.
Public Declare Function AxmMotGetDecelJerk Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpDecelJerk As Double) As Long

' 지정 축의 속도 Profile결정시 우선순위(속도 Or 가속도)를 설정한다.
' Priority : PRIORITY_VELOCITY   '0' - 속도 Profile결정시 지정한 속도값에 가깝도록 계산함(일반장비 및 Spinner에 사용).
'            PRIORITY_ACCELTIME  '1' - 속도 Profile결정시 지정한 가감속시간에 가깝도록 계산함(고속 장비에 사용).
Public Declare Function AxmMotSetProfilePriority Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uPriority As Long) As Long
' 지정 축의 속도 Profile결정시 우선순위(속도 Or 가속도)를 반환한다.
Public Declare Function AxmMotGetProfilePriority Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPriority As Long) As Long

'=========== 입출력 신호 관련 설정함수 ==============================================================================
' 지정 축의 Z 상 Level을 설정한다.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetZphaseLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' 지정 축의 Z 상 Level을 반환한다.
Public Declare Function AxmSignalGetZphaseLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long

' 지정 축의 Servo-On신호의 출력 레벨을 설정한다.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetServoOnLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' 지정 축의 Servo-On신호의 출력 레벨 설정을 반환한다.
Public Declare Function AxmSignalGetServoOnLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long

' 지정 축의 Servo-Alarm Reset 신호의 출력 레벨을 설정한다.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmSignalSetServoAlarmResetLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' 지정 축의 Servo-Alarm Reset 신호의 출력 레벨을 설정을 반환한다.
Public Declare Function AxmSignalGetServoAlarmResetLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long

' 지정 축의 Inpositon 신호 사용 여부 및 신호 입력 레벨을 설정한다
' uLevel :LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long
' 지정 축의 Inpositon 신호 사용 여부 및 신호 입력 레벨을 반환한다.
Public Declare Function AxmSignalGetInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long
' 지정 축의 Inpositon 신호 입력 상태를 반환한다.
Public Declare Function AxmSignalReadInpos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

' 지정 축의 알람 신호 입력 시 비상 정지의 사용 여부 및 신호 입력 레벨을 설정한다.
' uLevel :LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long
' 지정 축의 알람 신호 입력 시 비상 정지의 사용 여부 및 신호 입력 레벨을 반환한다.
Public Declare Function AxmSignalGetServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long
' 지정 축의 알람 신호의 입력 레벨을 반환한다.
Public Declare Function AxmSignalReadServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

' 지정 축의 end limit sensor의 사용 유무 및 신호의 입력 레벨을 설정한다.
' end limit sensor 신호 입력 시 감속정지 또는 급정지에 대한 설정도 가능하다.
' uStopMode: EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uLevel :LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uStopMode As Long, ByVal uPositiveLevel As Long, ByVal uNegativeLevel As Long) As Long
' 지정 축의 end limit sensor의 사용 유무 및 신호의 입력 레벨, 신호 입력 시 정지모드를 반환한다
Public Declare Function AxmSignalGetLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStopMode As Long, ByRef upPositiveLevel As Long, ByRef upNegativeLevel As Long) As Long
' 지정축의 end limit sensor의 입력 상태를 반환한다.
Public Declare Function AxmSignalReadLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPositiveStatus As Long, ByRef upNegativeStatus As Long) As Long

' 지정 축의 Software limit의 사용 유무, 사용할 카운트, 그리고 정지 방법을 설정한다
' uUse       : DISABLE(0), ENABLE(1)
' uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uSelection : COMMAND(0), ACTUAL(1)
' 주의사항: 원점검색시 위 함수를 이용하여 소프트웨어 리밋을 미리 설정해서 구동시 원점검색시 원점검색을 도중에 멈추어졌을경우에도  Enable된다.
Public Declare Function AxmSignalSetSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long, ByVal uStopMode As Long, ByVal uSelection As Long, ByVal dPositivePos As Double, ByVal dNegativePos As Double) As Long
' 지정 축의 Software limit의 사용 유무, 사용할 카운트, 그리고 정지 방법을 반환한다
Public Declare Function AxmSignalGetSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long, ByRef upStopMode As Long, ByRef upSelection As Long, ByRef dpPositivePos As Double, ByRef dpNegativePos As Double) As Long
' 지정 축의 Software limit의 현재 상태를 반환한다.
Public Declare Function AxmSignalReadSoftLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPositiveStatus As Long, ByRef upNegativeStatus As Long) As Long

' 비상 정지 신호의 정지 방법 (급정지/감속정지) 또는 사용 유무를 설정한다.
' uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
Public Declare Function AxmSignalSetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uStopMode As Long, ByVal uLevel As Long) As Long
' 비상 정지 신호의 정지 방법 (급정지/감속정지) 또는 사용 유무를 반환한다.
Public Declare Function AxmSignalGetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStopMode As Long, ByRef upLevel As Long) As Long
' 비상 정지 신호의 입력 상태를 반환한다.
Public Declare Function AxmSignalReadStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

' 지정 축의 Servo-On 신호를 출력한다.
' uOnOff : FALSE(0), TRUE(1) ( 범용 0출력에 해당됨)
Public Declare Function AxmSignalServoOn Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uOnOff As Long) As Long
' 지정 축의 Servo-On 신호의 출력 상태를 반환한다.
Public Declare Function AxmSignalIsServoOn Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upOnOff As Long) As Long

' 지정 축의 Servo-Alarm Reset 신호를 출력한다.
' uOnOff : FALSE(0), TRUE(1) ( 범용 1출력에 해당됨)
Public Declare Function AxmSignalServoAlarmReset Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uOnOff As Long) As Long

' 범용 출력값을 설정한다.
' uValue : Hex Value 0x00
Public Declare Function AxmSignalWriteOutput Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uValue As Long) As Long
' 범용 출력값을 반환한다.
Public Declare Function AxmSignalReadOutput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upValue As Long) As Long

' lBitNo : Bit Number(0 - 4)
' uOnOff : FALSE(0), TRUE(1)
' 범용 출력값을 비트별로 설정한다.
Public Declare Function AxmSignalWriteOutputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByVal uOnOff As Long) As Long
' 범용 출력값을 비트별로 반환한다.
Public Declare Function AxmSignalReadOutputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByRef upOnOff As Long) As Long

' 범용 입력값을 Hex값으로 반환한다.
Public Declare Function AxmSignalReadInput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upValue As Long) As Long
' lBitNo : Bit Number(0 - 4)
' 범용 입력값을 비트별로 반환한다.
Public Declare Function AxmSignalReadInputBit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBitNo As Long, ByRef upOn As Long) As Long

' 입력신호들의 디지털 필터계수를 설정한다.
' uSignal: END_LIMIT(0), INP_ALARM(1), UIN_00_01(2), UIN_02_04(3)
' dBandwidthUsec: 0.2uSec~26666usec
Public Declare Function AxmSignalSetFilterBandwidth Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSignal As Long, ByVal dBandwidthUsec As Double) As Long
